--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -18,8 +18,7 @@
 
 <body className="dark">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" className="dark "></div>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
-
 </html>
